--- a/main.css
+++ b/main.css
@@ -233,34 +233,34 @@
 }
 
 
-#saleoff {
+#frame {
     width: 100%;
     display: flex;
     height: 322px;
 }
-#saleoff .box-left ,#saleoff .box-right {
+#frame .box-left ,#frame .box-right {
     width: 50%;
 }
-#saleoff .box-left {
+#frame .box-left {
     background-image:url("picture/anh8.jpg") ;
     background-size:250px;
 }
 
-#saleoff .box-left h1{
+#frame .box-left h1{
     padding-top: 38px;
 }
-#saleoff .box-left span:nth-child(1)
+#frame .box-left span:nth-child(1)
 {
     color:#fff;
     font-size: 50px;
 }
-#saleoff .box-left span:nth-child(2)
+#frame .box-left span:nth-child(2)
 {
     color:orange;
     font-size: 128px;
 }
 
-#saleoff .box-right {
+#frame .box-right {
     background-image:url("picture/anh4.jpg") ;
     background-size:250px;
 }
@@ -288,13 +288,6 @@
     height: 250px;
     list-style: none;
     overflow: hidden; 
-}
-
-#list-comment {
-    width: 100%;
-    height: 100%;
-    list-style: none;
-    transition: 0.5s;
 }
 
 #footer {
