--- a/main.css
+++ b/main.css
@@ -21,7 +21,12 @@
 #menu .item {
     margin:0px 25px;
 }
-
+#menu1{     
+    display: flex;
+}
+#menu1 .icon{
+    margin-right:20px;
+}
 #menu .item a{
     color:#626A67;
     text-decoration: none;
@@ -35,6 +40,11 @@
     margin-left: 0px;
     cursor: pointer;
     display: inline-flex;
+}
+#actions .item .infor{
+    font-size: 18px;
+    color:#626A67;
+    list-style: none
 }
 .form-popup {
     display: none;
@@ -66,11 +76,6 @@
     font-size: 30px;
     color: #ff0000;
 }
-
-
-
-
-
 
 #banner{
     width: 80vW;
